my remote webserver

--- a/index.html
+++ b/index.html
@@ -1,5 +1,2 @@
 Welcome to my second webpage with second job
-
-/n jenkins
-
-/n after poll-cm and this is my third webpage
+this is last session for the day. 
